# cbtg-core

./: .env.example  .gitignore  README.md  get_version.py  pyproject.toml  run_summary.py  run_tour.py
cbtg/: __init__.py  structure_mapper.py
cbtg_core/: scanner.py
examples/sample_project/: project_summary.md
examples/sample_project/auth/: login.py  register.py
examples/sample_project/utils/: helpers.py
onboardly_core/: summarizer.py
tests/: test_scanner.py  test_structure_mapper.py  test_summarizer.py
